add experimental debugtoolbar and extra view with app builder prototype idea

--- a/bokehjs/src/less/main.less
+++ b/bokehjs/src/less/main.less
@@ -289,3 +289,10 @@
   position: relative;
   min-height: 400px; /* it doesn't get any size from absolute-positioned error panel */
 }
+
+.bk-debug-toolbar{
+  #debugtoolbar_icon{
+    position: absolute;
+    right: 5%;
+  }
+}
