add grey background on develop shell

--- a/bokeh/server/static/custom.css
+++ b/bokeh/server/static/custom.css
@@ -155,4 +155,7 @@ background: linear-gradient(to bottom,  #e2edc9 0%,#c7ceb7 50%,#cfe0c3 100%);
 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e2edc9', endColorstr='#cfe0c3',GradientType=0 );
 }
 
+div.bk-develop-shell{
+    background-color: #4c4c4c;
+}
 /* ---- end 4 Slick Grid ----*/
